--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -50,7 +50,7 @@
 			Link in the classes (and their dependencies) for the MXML tags
 			listed in this project's manifest.xml.
 			Also link the additional classes (and their dependencies)
-			listed in Flex4Classes.as,
+			listed in SparkClasses.as,
 			because these aren't referenced by the manifest classes.
 			Link in accessibility support.
 			Include the appropriate CSS files and assets in the SWC.
@@ -64,7 +64,7 @@
 			<jvmarg line="${compc.jvm.args}"/>
 			<namespace uri="library://ns.adobe.com/flex/spark" manifest="${basedir}/manifest.xml"/>
 			<include-namespaces uri="library://ns.adobe.com/flex/spark"/>
-			<include-classes>Flex4Classes</include-classes>
+			<include-classes>SparkClasses</include-classes>
 			<source-path path-element="${basedir}/src"/>
 			<library-path />
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
@@ -101,7 +101,7 @@
 			<include-namespaces/>
 			<include-classes/>
 			<source-path path-element="${basedir}/bundles/${locale}"/>
-			<source-path path-element="${FLEX_HOME}/frameworks/projects/flex4/src"/>
+			<source-path path-element="${FLEX_HOME}/frameworks/projects/spark/src"/>
 			<source-path path-element="${FLEX_HOME}/frameworks/projects/framework/src"/>
 			<include-libraries/>
 			<library-path/>
@@ -138,7 +138,7 @@
 		<!-- Call asdoc to generate dita xml files -->
 		<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" fork="true">
 		    <compiler.source-path path-element="${basedir}/src"/>
-		    <doc-classes class="Flex4Classes"/>
+		    <doc-classes class="SparkClasses"/>
 		    <doc-namespaces uri="library://ns.adobe.com/flex/spark"/>
 			<namespace uri="library://ns.adobe.com/flex/spark" manifest="${basedir}/manifest.xml"/>
 		    <jvmarg line="${asdoc.jvm.args}"/>
