Transferred from the Adobe Open Source Subversion Repository
Revision: 8058
Author:   dsubrama@adobe.com
Date:     2009-06-22T19:34:24.185024Z

Log Message: 
-----------
Keep in the cleanup of the flex4.swc and flex4_rb.swc for housekeeping purposes.

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/projects/spark/build.xml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274779 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -28,10 +28,12 @@
 				<include name="spark.swc"/>
 				<include name="graphics.swc"/>
 				<include name="spark.swc.incr"/>
+				<include name="flex4.swc"/>
 			</fileset>
 			<fileset dir="${FLEX_HOME}/frameworks/locale">
 				<include name="*/spark_rb.swc"/>
 				<include name="*/spark_rb.swc.incr"/>
+				<include name="*/flex4_rb.swc"/>
 			</fileset>
 		</delete>
 	</target>
