Transferred from the Adobe Open Source Subversion Repository
Revision: 11154
Author:   clucier@adobe.com
Date:     2009-10-26T18:26:26.959756Z

Log Message: 
-----------
Adding support for -minimum-supported-version.  We now exclude spark.swc, sparkskins.swc, and spark_rb.swc from linkage when compatibility-version is < 4.0.0.  Please see https://zerowing.corp.adobe.com/display/flex/Compatibility+Mode+SWC+Policy

QE notes: None 
Doc notes: None
Bugs: None
Reviewer: Paul
Tests run: Checkin
Is noteworthy for integration: Yes

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/tools/oem/Library.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/asdoc/AsDocAPI.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/swc/SwcCache.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/swc/catalog/CatalogWriter.java</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/spark/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/linker/LinkerConfiguration.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/tools/Compc.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/swc/Swc.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/common/CompilerConfiguration.java</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/sparkskins/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/common/MxmlConfiguration.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/common/Configuration.java</path>
<path kind="file" action="M">/flex/sdk/trunk/modules/compiler/src/java/flex2/compiler/swc/catalog/CatalogReader

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -62,7 +62,7 @@
 			Write a bundle list of referenced resource bundles
 			into the file bundles.properties in this directory.
 		-->
-		<compc fork="true"
+		<compc fork="true" minimum-supported-version="4.0.0"
 			   output="${FLEX_HOME}/frameworks/libs/spark.swc"
 			   resource-bundle-list="${basedir}/bundles.properties">
 			<jvmarg line="${compc.jvm.args}"/>
@@ -78,7 +78,7 @@
 			</external-library-path>
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
 			<include-file name="defaults.css" path="${basedir}/defaults.css"/>
-			<include-file name="defaults-3.0.0.css" path="${basedir}/defaults-3.0.0.css"/>
+			<include-file name="defaults-3.0.0.css" path="${basedir}/defaults-3.0.0.css"/>	
 			<locale/>
             <keep-as3-metadata name="SkinPart"/>
 			<accessible>true</accessible>
@@ -93,7 +93,7 @@
 		<!-- Load the <compc> task. We can't do this at the <project> level -->
 		<!-- because targets that run before flexTasks.jar gets built would fail. -->
 		<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/lib/flexTasks.jar"/>
-		<compc fork="true"
+		<compc fork="true" minimum-supported-version="4.0.0"
 			   output="${FLEX_HOME}/frameworks/locale/${locale}/spark_rb.swc"
 			   locale="${locale}">
 
