Transferred from the Adobe Open Source Subversion Repository
Revision: 11449
Author:   rfrishbe@adobe.com
Date:     2009-11-05T01:09:57.699854Z

Log Message: 
-----------
Adding OSMF to our framework.  The osmf.swc builds automatically as part of our build process.  I'm also adding new video classes that use OSMF, spark.components.VideoDisplay and spark.components.VideoPlayer2.  The other VideoElement and VideoPlayer will be replaced by these.  The new video components are not yet complete; this is an initial checkin for these components.

QE notes: -
Doc notes: -
Bugs: -
Reviewer: Deepa (only the build processes stuff)
Tests run: checkintests
Is noteworthy for integration: Yes

Modified Paths:
--------------
283 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274783 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -74,6 +74,7 @@
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
                 <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
+                <include name="osmf.swc"/>
                 <include name="textLayout.swc"/>
 			</external-library-path>
 			<include-file name="version.properties" path="${FLEX_HOME}/frameworks/version.properties"/>
