--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -101,8 +101,9 @@
             <target-player>10</target-player>
 			<jvmarg line="${compc.jvm.args}"/>
  			<include-resource-bundles bundle="components"/>
-			<include-resource-bundles bundle="sparkEffects"/>
 			<include-resource-bundles bundle="layout"/>
+			<include-resource-bundles bundle="sparkEffects"/>
+			<include-resource-bundles bundle="textLayout"/>
 			<include-namespaces/>
 			<include-classes/>
 			<source-path path-element="${basedir}/bundles/${locale}"/>
