--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -13,12 +13,88 @@
 
 <project name="spark" default="main" basedir=".">
 	<property name="FLEX_HOME" location="${basedir}/../../.."/>
-
 	<property file="${FLEX_HOME}/build.properties"/>
+	<property name="locale" value="en_US"/>
+	
+	<macrodef name="bundle">
+		<attribute name="locale"/>
+		<sequential>
+			<echo message="Compiling frameworks/locale/@{locale}/spark_rb.swc"/>
+			<!-- Load the <compc> task. We can't do this at the <project> level -->
+			<!-- because targets that run before flexTasks.jar gets built would fail. -->
+			<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/lib/flexTasks.jar"/>
+			<compc fork="true" minimum-supported-version="4.0.0"
+				   output="${FLEX_HOME}/frameworks/locale/@{locale}/spark_rb.swc"
+				   locale="@{locale}">
 
-	<target name="main" depends="clean,compile,en_US" description="Clean build of spark.swc and its English resources"/>
+				<target-player>10</target-player>
+				<jvmarg line="${compc.jvm.args}"/>
+                <include-resource-bundles bundle="layout"/>
+				<include-resource-bundles bundle="components"/>
+				<include-resource-bundles bundle="sparkEffects"/>
+				<include-resource-bundles bundle="textLayout"/>
+                <include-resource-bundles bundle="osmf"/>
+				<include-namespaces/>
+				<include-classes/>
+				<source-path path-element="${basedir}/bundles/@{locale}"/>
+				<source-path path-element="${FLEX_HOME}/frameworks/projects/spark/src"/>
+				<source-path path-element="${FLEX_HOME}/frameworks/projects/framework/src"/>
+				<include-libraries/>
+				<library-path/>
+				<external-library-path dir="${FLEX_HOME}/frameworks/libs">
+					<include name="player/${local.playerglobal.version}/playerglobal.swc"/>
+				</external-library-path>
+			</compc>
+		</sequential>
+	</macrodef>	
+	
+	<macrodef name="fat-swc">
+		<attribute name="locale"/>
+		<sequential>
+			<mkdir dir="${basedir}/bundles/@{locale}/docs" />
+			<zip destfile="${FLEX_HOME}/frameworks/locale/@{locale}/spark_rb.swc" update="true">
+				<zipfileset dir="${basedir}/bundles/@{locale}/docs" prefix="docs">
+					<include name="*.*"/>
+				</zipfileset>
+			</zip>
+			<delete dir="${basedir}/bundles/@{locale}/docs" failonerror="false"/>
+		</sequential>
+	</macrodef>	
 
-	<target name="other.locales" depends="da_DK,de_DE,es_ES,fi_FI,fr_FR,it_IT,ja_JP,ko_KR,nb_NO,nl_NL,pt_BR,ru_RU,sv_SE,zh_CN,zh_TW" description="Build other locale SWCs"/>
+	<macrodef name="bundler">
+		<attribute name="locale"/>
+		<sequential>
+			<bundle locale="@{locale}"/>
+			<fat-swc locale="@{locale}"/>
+		</sequential>
+	</macrodef>
+	
+	<target name="main" depends="clean,compile" description="Clean build of spark.swc and en_US">
+		<bundle locale="${locale}"/>
+	</target>
+	
+	<target name="other.locales" depends="bundles-clean,bundles" description="Build other locale SWCs"/>
+	
+	<!-- This is a private target for building automation_flashflexkit_rb.swc for various locales. -->
+	<!-- The targets below set the 'locale' parameter and call it with <antcall>. -->
+	<target name="bundles">
+		<bundler locale="da_DK"/><!-- Danish resources -->
+		<bundler locale="de_DE"/><!-- German resources -->
+		<bundler locale="en_US"/><!-- American English resources  -->
+		<bundler locale="es_ES"/><!-- Spanish resources -->
+		<bundler locale="fi_FI"/><!--  Finnish resources-->
+		<bundler locale="fr_FR"/><!-- French resources -->
+		<bundler locale="it_IT"/><!-- Italian resources -->
+		<bundler locale="ja_JP"/><!-- Japanese resources -->
+		<bundler locale="ko_KR"/><!-- Korean resources -->
+		<bundler locale="nb_NO"/><!-- Norwegian Bokmal resources -->
+		<bundler locale="nl_NL"/><!-- Dutch resources -->
+		<bundler locale="pt_BR"/><!-- Brazilian Portuguese resources -->
+		<bundler locale="ru_RU"/><!-- Swedish resources -->
+		<bundler locale="sv_SE"/><!-- Swedish resources -->
+		<bundler locale="zh_CN"/><!-- Simplified Chinese resources -->
+		<bundler locale="zh_TW"/><!-- Traditional Chinese resources -->
+	</target>
 	
 	<target name="clean">
 		<delete failonerror="false">
@@ -32,6 +108,11 @@
 				<include name="spark.swc.incr"/>
 				<include name="flex4.swc"/>
 			</fileset>
+		</delete>
+	</target>
+	
+	<target name="bundles-clean">
+		<delete failonerror="false">
 			<fileset dir="${FLEX_HOME}/frameworks/locale">
 				<include name="*/spark_rb.swc"/>
 				<include name="*/spark_rb.swc.incr"/>
@@ -39,6 +120,7 @@
 			</fileset>
 		</delete>
 	</target>
+	
 	
 	<target name="prepare" description="Copies manifests to project directories so the IDE can find them">
 		<copy file="${FLEX_HOME}/frameworks/spark-manifest.xml" tofile="${basedir}/manifest.xml" overwrite="true"/>
@@ -74,6 +156,7 @@
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
                 <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
+				<include name="datavisualization.swc"/>
                 <include name="osmf.swc"/>
                 <include name="textLayout.swc"/>
 			</external-library-path>
@@ -85,192 +168,7 @@
 		</compc>
 		<delete file="${FLEX_HOME}/frameworks/version.properties"/>
 	</target>
-
-	<!-- This is a private target for building spark_rb.swc for various locales. -->
-	<!-- The targets below set the 'locale' parameter and call it with <antcall>. -->
-	<target name="bundle">
-		<echo message="Compiling frameworks/locale/${locale}/spark_rb.swc"/>
-		<!-- Load the <compc> task. We can't do this at the <project> level -->
-		<!-- because targets that run before flexTasks.jar gets built would fail. -->
-		<taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/lib/flexTasks.jar"/>
-		<compc fork="true" minimum-supported-version="4.0.0"
-			   output="${FLEX_HOME}/frameworks/locale/${locale}/spark_rb.swc"
-			   locale="${locale}">
-
-            <target-player>10</target-player>
-			<jvmarg line="${compc.jvm.args}"/>
- 			<include-resource-bundles bundle="components"/>
-			<include-resource-bundles bundle="layout"/>
-			<include-resource-bundles bundle="sparkEffects"/>
-			<include-resource-bundles bundle="textLayout"/>
-            <include-resource-bundles bundle="osmf"/>
-			<include-namespaces/>
-			<include-classes/>
-			<source-path path-element="${basedir}/bundles/${locale}"/>
-			<source-path path-element="${FLEX_HOME}/frameworks/projects/spark/src"/>
-			<source-path path-element="${FLEX_HOME}/frameworks/projects/framework/src"/>
-			<include-libraries/>
-			<library-path/>
-            <external-library-path dir="${FLEX_HOME}/frameworks/libs">
-                <include name="player/${local.playerglobal.version}/playerglobal.swc"/>
-			</external-library-path>
-		</compc>
-	</target>
-
-	<!-- updates spark_rb.swc with asdoc xml -->
-	<target name="fat-swc">
-		<mkdir dir="${basedir}/bundles/${locale}/docs" />
-        <zip destfile="${FLEX_HOME}/frameworks/locale/${locale}/spark_rb.swc" update="true">
-            <zipfileset dir="${basedir}/bundles/${locale}/docs" prefix="docs">
-                <include name="*.*"/>
-            </zipfileset>
-        </zip>
-	</target>
 	
-	<!-- Targets for compiling spark_rb.swc for various locales -->
-
-	<target name="da_DK" description="Danish resources">
-		<antcall target="bundle">
-			<param name="locale" value="da_DK"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="da_DK"/>
-		</antcall>
-	</target>
-
-	<target name="de_DE" description="German resources">
-		<antcall target="bundle">
-			<param name="locale" value="de_DE"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="de_DE"/>
-		</antcall>
-	</target>
-
-	<target name="en_US" description="American English resources">
-		<antcall target="bundle">
-			<param name="locale" value="en_US"/>
-		</antcall>
-	</target>
-
-	<target name="es_ES" description="Spanish resources">
-		<antcall target="bundle">
-			<param name="locale" value="es_ES"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="es_ES"/>
-		</antcall>
-	</target>
-
-	<target name="fi_FI" description="Finnish resources">
-		<antcall target="bundle">
-			<param name="locale" value="fi_FI"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="fi_FI"/>
-		</antcall>
-	</target>
-
-	<target name="fr_FR" description="French resources">
-		<antcall target="bundle">
-			<param name="locale" value="fr_FR"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="fr_FR"/>
-		</antcall>
-	</target>
-
-	<target name="it_IT" description="Italian resources">
-		<antcall target="bundle">
-			<param name="locale" value="it_IT"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="it_IT"/>
-		</antcall>
-	</target>
-
-	<target name="ja_JP" description="Japanese resources">
-		<antcall target="bundle">
-			<param name="locale" value="ja_JP"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="ja_JP"/>
-		</antcall>
-	</target>
-
-	<target name="ko_KR" description="Korean resources">
-		<antcall target="bundle">
-			<param name="locale" value="ko_KR"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="ko_KR"/>
-		</antcall>
-	</target>
-
-	<target name="nb_NO" description="Norwegian Bokmal resources">
-		<antcall target="bundle">
-			<param name="locale" value="nb_NO"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="nb_NO"/>
-		</antcall>
-	</target>
-
-	<target name="nl_NL" description="Dutch resources">
-		<antcall target="bundle">
-			<param name="locale" value="nl_NL"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="nl_NL"/>
-		</antcall>
-	</target>
-
-	<target name="pt_BR" description="Brazilian Portuguese resources">
-		<antcall target="bundle">
-			<param name="locale" value="pt_BR"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="pt_BR"/>
-		</antcall>
-	</target>
-
-    <target name="ru_RU" description="Swedish resources">
-        <antcall target="bundle">
-            <param name="locale" value="ru_RU"/>
-        </antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="ru_RU"/>
-		</antcall>
-    </target>
-
-    <target name="sv_SE" description="Swedish resources">
-		<antcall target="bundle">
-			<param name="locale" value="sv_SE"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="sv_SE"/>
-		</antcall>
-	</target>
-
-	<target name="zh_CN" description="Simplified Chinese resources">
-		<antcall target="bundle">
-			<param name="locale" value="zh_CN"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="zh_CN"/>
-		</antcall>
-	</target>
-
-	<target name="zh_TW" description="Traditional Chinese resources">
-		<antcall target="bundle">
-			<param name="locale" value="zh_TW"/>
-		</antcall>
-		<antcall target="fat-swc">
-			<param name="locale" value="zh_TW"/>
-		</antcall>
-	</target>
-
-
 	<target name="doc" depends="clean-temp-docs" description="updates spark.swc with asdoc xml">
 		<!-- Load the <asdoc> task. We can't do this at the <project> level -->
 		<!-- because targets that run before flexTasks.jar gets built would fail. -->
