--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -196,6 +196,7 @@
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
                 <include name="player/${global.playerglobal.version}/playerglobal.swc"/>
 				<include name="framework.swc"/>
+				<include name="mx/mx.swc"/>
                 <include name="osmf.swc"/>
                 <include name="textLayout.swc"/>
 			</external-library-path>
