Transferred from the Adobe Open Source Subversion Repository
Revision: 17732
Author:   gauravj@adobe.com
Date:     2010-09-16T16:04:37.221468Z

Log Message: 
-----------
Modifying build scripts to remove "frameworks/projects/framework/src" from the source-path

QE notes: None
Doc notes: None
Bugs: SDK-27570
Reviewer: Jim
Tests run: checkintests
Is noteworthy for integration: No

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/automation_flashflexkit/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/osmf/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/rpc/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/airframework/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/datavisualization/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/airspark/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/automation_airspark/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/mobilecomponents/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/flash-integration/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/automation/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/automation_spark/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/hero_private/frameworks/projects/spark/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274794 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -40,11 +40,11 @@
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/osmf/bundles/@{locale}"/>
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/textLayout/bundles/@{locale}"/>
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/spark/src"/>
-				<source-path path-element="${FLEX_HOME}/frameworks/projects/framework/src"/>
 				<include-libraries/>
 				<library-path/>
 				<external-library-path dir="${FLEX_HOME}/frameworks/libs">
-					<include name="player/${local.playerglobal.version}/playerglobal.swc"/>
+					<include name="player/${global.playerglobal.version}/playerglobal.swc"/>
+					<include name="framework.swc"/>
 				</external-library-path>
 			</compc>
 		</sequential>
