--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -30,6 +30,7 @@
 				<target-player>10.2</target-player>
 				<jvmarg line="${compc.jvm.args}"/>
                 <include-resource-bundles bundle="layout"/>
+				<include-resource-bundles bundle="collections"/>
 				<include-resource-bundles bundle="components"/>
 				<include-resource-bundles bundle="sparkEffects"/>
 				<include-resource-bundles bundle="textLayout"/>
@@ -37,6 +38,7 @@
 				<include-namespaces/>
 				<include-classes/>
 				<source-path path-element="${basedir}/bundles/@{locale}"/>
+				<source-path path-element="${FLEX_HOME}/frameworks/projects/framework/bundles/@{locale}"/>
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/osmf/bundles/@{locale}"/>
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/textLayout/bundles/@{locale}"/>
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/spark/src"/>
