Transferred from the Adobe Open Source Subversion Repository
Revision: 23266
Author:   cframpto@adobe.com
Date:     2012-01-05T20:25:05.433966Z

Log Message: 
-----------
Download the relevant debugger player for the given platform.  Ignore directories that are created by the downloads.  Fix build_framework.xml so it builds the contents of the package when it is unzipped.  It looks like it shipped broken (spark_dmv didn't build) for Flex 4.6.

Modified Paths:
--------------
<path kind="dir" action="D">/private/flex/sdk/branches/apache/in/player</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/projects/spark/build.xml</path>
<path kind="dir" action="M">/private/flex/sdk/branches/apache/frameworks/projects/textLayout/.settings</path>
<path kind="dir" action="M">/private/flex/sdk/branches/apache/frameworks/projects/textLayout</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/build_framework.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/build.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/build.xml</path>
<path kind="dir" action="M">/private/flex/sdk/branches/apache/frameworks</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1274800 13f79535-47bb-0310-9956-ffa450edef68

--- a/projects/spark/build.xml
+++ b/projects/spark/build.xml
@@ -47,7 +47,7 @@
 				<include-classes/>
 				<source-path path-element="${basedir}/bundles/@{locale}"/>
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/framework/bundles/@{locale}"/>
-				<source-path path-element="${FLEX_HOME}/frameworks/projects/osmf/bundles/@{locale}"/>
+				<!--source-path path-element="${FLEX_HOME}/frameworks/projects/osmf/bundles/@{locale}"/-->
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/textLayout/bundles/@{locale}"/>
 				<source-path path-element="${FLEX_HOME}/frameworks/projects/spark/src"/>
 				<include-libraries/>
